--- a/index.html
+++ b/index.html
@@ -4,36 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Karam Samer – Front-End Developer</title>
-
     <meta name="description"
-        content="Karam Samer is a Front-End Developer and Computer Science student building responsive, clean websites using HTML, CSS, and JavaScript.">
-    <meta name="author" content="Karam Samer">
-    <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#0a192f">
-
-    <link rel="canonical" href="https://karamsamer.me/" />
-    <link rel="alternate" hreflang="en" href="https://karamsamer.me/" />
-
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://karamsamer.me/">
-    <meta property="og:title" content="Karam Samer – Front-End Developer">
+        content="Front-End Developer focused on creating clean, responsive websites using HTML, CSS, and JavaScript. Check out my projects and skills.">
+    <meta property="og:title" content="Karam Samer | Front-End Developer">
     <meta property="og:description"
-        content="Front-End Developer portfolio showcasing responsive and clean web projects.">
-    <meta property="og:image" content="https://karamsamer.me/assets/images/og-image.webp">
+        content="I'm Karam Samer, a Front-End Developer. See my work, skills, and resume here.">
+    <meta property="og:image" content="assets/images/profile-placeholder.webp">
+    <meta property="og:type" content="website">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Karam Samer – Front-End Developer">
-    <meta name="twitter:description" content="Front-End Developer portfolio built with HTML, CSS, and JavaScript.">
-    <meta name="twitter:image" content="https://karamsamer.me/assets/images/og-image.webp">
-
-    <!-- Favicon -->
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <title>Karam Samer | Front-End Developer</title>
 
-    <!-- Fonts -->
+    <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
+    <!-- Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Inter:wght@400;600;700;800&display=swap"
         rel="stylesheet">
@@ -354,7 +341,7 @@
                         </div>
                     </div>
                     <div class="fp-image">
-                        <img src="assets/project/educational-platform.png" alt="Educational Platform Interface"
+                        <img src="assets/project/educational-platform.webp" alt="Educational Platform Interface"
                             class="project-img">
                     </div>
                 </div>
