--- a/index.html
+++ b/index.html
@@ -4,16 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Karam Samer | Front-End Developer</title>
+
+    <link rel="canonical" href="https://karamsamer.me/">
+
+    <meta name="robots" content="index, follow">
+
     <meta name="description"
-        content="Front-End Developer focused on creating clean, responsive websites using HTML, CSS, and JavaScript. Check out my projects and skills.">
+        content="Front-End Developer & Computer Science student building clean, responsive, and high-performance web interfaces.">
+
+    <meta name="author" content="Karam Samer">
+
+    <!-- Open Graph / LinkedIn -->
     <meta property="og:title" content="Karam Samer | Front-End Developer">
     <meta property="og:description"
-        content="I'm Karam Samer, a Front-End Developer. See my work, skills, and resume here.">
-    <meta property="og:image" content="assets/images/profile-placeholder.webp">
+        content="Personal portfolio showcasing front-end projects, UML diagrams, and performance-optimized web development.">
+    <meta property="og:image" content="https://karamsamer.me/og-image.png">
+    <meta property="og:image:alt" content="Karam Samer Front-End Developer Portfolio">
+    <meta property="og:url" content="https://karamsamer.me/">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Karam Samer">
+    <meta property="og:locale" content="en_US">
 
-    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
-    <title>Karam Samer | Front-End Developer</title>
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Karam Samer | Front-End Developer">
+    <meta name="twitter:description"
+        content="Front-End projects, UML system design, and performance-focused web development.">
+    <meta name="twitter:image" content="https://karamsamer.me/og-image.png">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
