--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <meta property="og:title" content="Karam Samer | Front-End Developer">
     <meta property="og:description"
         content="Personal portfolio showcasing front-end projects, UML diagrams, and performance-optimized web development.">
-    <meta property="og:image" content="https://karamsamer.me/og-image.png">
+    <meta property="og:image" content="https://karamsamer.me/assets/images/og-img.jpg">
     <meta property="og:image:alt" content="Karam Samer Front-End Developer Portfolio">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://karamsamer.me/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Karam Samer">
@@ -32,7 +34,7 @@
     <meta name="twitter:title" content="Karam Samer | Front-End Developer">
     <meta name="twitter:description"
         content="Front-End projects, UML system design, and performance-focused web development.">
-    <meta name="twitter:image" content="https://karamsamer.me/og-image.png">
+    <meta name="twitter:image" content="https://karamsamer.me/assets/images/og-img.jpg">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
