--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         content="Front-End projects, UML system design, and performance-focused web development.">
     <meta name="twitter:image" content="https://karamsamer.me/og-img.jpg">
 
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
