Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         content="Front-End projects, UML system design, and performance-focused web development.">
     <meta name="twitter:image" content="https://karamsamer.me/og-img.jpg">
 
-    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
