--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0f172a">
 
     <title>Karam Samer | Front-End Developer</title>
 
@@ -58,6 +59,20 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/components.css">
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Karam Samer",
+      "url": "https://karamsamer.me",
+      "jobTitle": "Front-End Developer",
+      "sameAs": [
+        "https://github.com/Karam-Samer",
+        "https://linkedin.com/in/karam-alatwan-011819330"
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -80,8 +95,8 @@
                 <li class="nav-item"><a href="#certifications" class="nav-link">Certifications</a></li>
                 <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item btn-item"><a href="assets/Karam-Samer-CV.pdf" target="_blank"
-                        class="btn btn-sm">Resume</a></li>
+                <li class="nav-item btn-item"><a href="assets/Karam-Samer-CV.pdf" target="_blank" class="btn btn-sm"
+                        rel="noopener noreferrer">Resume</a></li>
 
             </ul>
         </div>
@@ -103,10 +118,12 @@
                     <a href="tel:01097400036" class="info-item">
                         <i class="fa-solid fa-phone"></i> 01097400036
                     </a>
-                    <a href="https://github.com/Karam-Samer" target="_blank" class="info-item">
+                    <a href="https://github.com/Karam-Samer" target="_blank" class="info-item"
+                        rel="noopener noreferrer">
                         <i class="fa-brands fa-github"></i> GitHub
                     </a>
-                    <a href="https://linkedin.com/in/karam-alatwan-011819330" target="_blank" class="info-item">
+                    <a href="https://linkedin.com/in/karam-alatwan-011819330" target="_blank" class="info-item"
+                        rel="noopener noreferrer">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn
                     </a>
                 </div>
@@ -116,8 +133,10 @@
                     <p id="random-quote">Loading inspiration...</p>
                 </div>
                 <div class="hero-buttons">
-                    <a href="assets/Karam-Samer-CV.pdf" target="_blank" class="btn btn-primary">View CV</a>
-                    <a href="assets/Karam-Samer-CV.pdf" target="_blank" class="btn btn-outline" download>Download CV</a>
+                    <a href="assets/Karam-Samer-CV.pdf" target="_blank" class="btn btn-primary"
+                        rel="noopener noreferrer">View CV</a>
+                    <a href="assets/Karam-Samer-CV.pdf" target="_blank" class="btn btn-outline" download
+                        rel="noopener noreferrer">Download CV</a>
                 </div>
             </div>
             <div class="hero-image fade-in-up delay-200">
@@ -362,8 +381,10 @@
                         </ul>
                         <div class="fp-links">
                             <a href="https://github.com/Karam-Samer/EducationalPlatform" target="_blank"
-                                class="icon-link" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="icon-link" aria-label="Demo"><i
+                                class="icon-link" aria-label="GitHub" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-github"></i></a>
+                            <a href="https://karam-samer.github.io/EducationalPlatform/" target="_blank"
+                                class="icon-link" aria-label="Demo" rel="noopener noreferrer"><i
                                     class="fa-solid fa-external-link-alt"></i></a>
                         </div>
                     </div>
@@ -381,10 +402,10 @@
                         <div class="pc-top">
                             <div class="folder-icon"><i class="fa-regular fa-folder"></i></div>
                             <div class="pc-links">
-                                <a href="https://github.com/Karam-Samer/E-Commerc/" target="_blank"
-                                    aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://karam-samer.github.io/E-Commerc/" target="_blank" aria-label="Demo"><i
-                                        class="fa-solid fa-external-link-alt"></i></a>
+                                <a href="https://github.com/Karam-Samer/E-Commerc/" target="_blank" aria-label="GitHub"
+                                    rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                                <a href="https://karam-samer.github.io/E-Commerc/" target="_blank" aria-label="Demo"
+                                    rel="noopener noreferrer"><i class="fa-solid fa-external-link-alt"></i></a>
                             </div>
                         </div>
                         <h3 class="pc-title">BookStore UML</h3>
@@ -406,7 +427,8 @@
                             <div class="folder-icon"><i class="fa-regular fa-folder"></i></div>
                             <div class="pc-links">
                                 <a href="https://github.com/Karam-Samer/StudentGradeAnalysis" target="_blank"
-                                    aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+                                    aria-label="GitHub" rel="noopener noreferrer"><i
+                                        class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                         <h3 class="pc-title">Student Grade Analysis</h3>
@@ -522,12 +544,12 @@
 
             <div class="social-cards-grid">
                 <a href="https://github.com/Karam-Samer" target="_blank" class="social-card glass-card"
-                    aria-label="GitHub">
+                    aria-label="GitHub" rel="noopener noreferrer">
                     <i class="fa-brands fa-github"></i>
                     <span>GitHub</span>
                 </a>
                 <a href="https://linkedin.com/in/karam-alatwan-011819330" target="_blank" class="social-card glass-card"
-                    aria-label="LinkedIn">
+                    aria-label="LinkedIn" rel="noopener noreferrer">
                     <i class="fa-brands fa-linkedin"></i>
                     <span>LinkedIn</span>
                 </a>
@@ -536,7 +558,7 @@
     </section>
 
     <footer>
-        <p>Designed & Built by Karam Samer © 2025</p>
+        <p>Designed & Built by Karam Samer © <span id="year"></span></p>
     </footer>
 
     <!-- Modals -->
